STYLE: Fixed gap between texts of price

--- a/frontend/src/Components/FavoriteCard/styles.module.css
+++ b/frontend/src/Components/FavoriteCard/styles.module.css
@@ -17,7 +17,7 @@
 
 .priceStyling {
     color: #1A2B48;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 500;
 
 }
